--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
                     <div class="portfolio-content">
                         <h3>CinemaMom</h3>
                         <p>All Movies Your premium destination for authentic Telugu cinema. Watch classic movies with direct official links.</p>
-                        <a href="https://omkarsaicharan.github.io/CinemaMom1/" style="padding: 0.75rem 1.5rem; font-size: 0.875rem;">
+                        <a href="https://omkarsaicharan.github.io/CinemaMom1/" class="btn btn-outline" style="padding: 0.75rem 1.5rem; font-size: 0.875rem;">
                             View Project
                         </a>
                     </div>
@@ -1550,6 +1550,7 @@
     </script>
 </body>
 </html>
+
 
 
 
