--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NapC | Digital Solutions</title>
+    <title>NapieC | Digital Solutions</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap">
     <style>
@@ -1161,7 +1161,7 @@
                     <img src="https://images.unsplash.com/photo-1558655146-364adaf1fcc9?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="E-commerce Website" class="portfolio-img">
                     <div class="portfolio-content">
                         <h3>INDSHOPSIDE Modern E-commerce Platform</h3>
-                        <p>A responsive online store with intuitive shopping experience and secure payment integration.</p>
+                        <p>A responsive onlineNapCre with intuitive shopping experience and secure payment integration.</p>
                         <a href="https://omkarsaicharan.github.io/INDSHOPSIDE/" target="_blank" class="btn btn-outline" style="padding: 0.75rem 1.5rem; font-size: 0.875rem;">
                             View Project
                         </a>
@@ -1322,7 +1322,7 @@
             <div class="footer-content">
                 <div>
                     <div class="footer-logo">
-                        nap<span>C</span>
+                        napie<span>C</span>
                     </div>
                     <p>Creating digital experiences that inspire and drive results. We help businesses establish a strong online presence with beautiful, functional solutions.</p>
                     <div class="social-links">
@@ -1364,7 +1364,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 NapC All rights reserved. | Designed with care for beautiful digital experiences.</p>
+                <p>&copy; 2025 NapieC All rights reserved. | Designed with care for beautiful digital experiences.</p>
             </div>
         </div>
     </footer>
@@ -1550,6 +1550,7 @@
     </script>
 </body>
 </html>
+
 
 
 
